<resources>
    <string name="app_name">SMARTHOUSE</string>
    <!--string name="app_name">Micasa</string-->
    <string name="etDeviceInternet">Escribe la direccion IP del dispositivo</string>
    <string name="etDeviceBluetooth">Escribe la direccion MAC del dispositivo</string>
    <string name="btnsavedevice">Guardar Dispositivo</string>


    <string name="nconexion">Conectar Dispositivo</string>
    <string name="econexion">Editar Conexion</string>
    <string name="ebluetooth">Bluetooth</string>
    <string name="einternet">Internet</string>
    <string name="acerca">Acerca de:</string>
    <string name="ccasa">Control Casa</string>
    <string name="titlecasa">Casa Inteligente</string>
    <string name="adispositivos">Agregar Dispositivos</string>
    <string name="dialogo_metodo_conexion">¡Atención! para continuar por favor selecciona el metodo de conexion.</string>

    <string name="nombredevice">Foco Principal</string>


    <string name="biografia">Omar de Jesus Hidrogo Muñoz (Torreon, Coahuila, 8 de diciembre de 1990     Actualmente Ing. en Tecnologias de la Informacion y Comunicacion
        Egresado de la Universidad Tecnologica de Torreon en el año 2014   </string>
    <string name="biop2">En el año 2015 se incorpore al actual trabajo como Ing. en Sistemas donde una de las funciones es dar soporte a todos los usuarios de la empresa,
    Infraestructura de red, Administrador de Servidores entre otros.</string>
    <string name="biop3">Mis pasatiempos son leer, caminar, escuchar musica, ir al cine y hacer ejercicio</string>
    <string name="none_paired">No hay Dispositivos Vinculados</string>

    <string name="exit">Salir</string>
</resources>
