<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/ccasa"
        android:title="@string/ccasa"
        android:orderInCategory="98">
    </item>
    <item
        android:id="@+id/nconexion"
        android:title="@string/nconexion"
        android:orderInCategory="99">

    </item>
    <item
        android:title="@string/econexion"
        android:orderInCategory="100">
        <menu>
            <item
                android:id="@+id/cbluetooth"
                android:title="@string/ebluetooth"
                android:orderInCategory="1">
            </item>
            <item
                android:id="@+id/cInternet"
                android:title="@string/einternet"
                android:orderInCategory="2">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/acerca"
        android:title="@string/acerca"
        android:orderInCategory="101">
    </item>
    <item
        android:id="@+id/exit"
        android:title="@string/exit"
        android:orderInCategory="102">
    </item>

</menu>